# emmy

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  task-definition.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_api_keys_table.py  003_add_users_table.py  004_add_sessions_table.py  005_add_user_profiles.py  006_update_user_profiles.py  007_add_email_to_profiles.py  008_update_instance_settings_schema.py
app/: main.py
app/api/routes/: api_key_routes.py  auth_routes.py  chat_routes.py  instance_routes.py  profile_routes.py  websocket_routes.py
app/core/: auth.py  cache.py  config.py  database.py  docs.py  exceptions.py  health.py  logging.py  metrics.py  middleware.py  redis.py  security.py  settings_validation.py  tasks.py
app/models/: api_key.py  chat.py  instance.py  instance_settings.py  profile.py  session.py  user.py  websocket.py
app/models/database/: api_key.py  chat.py  instance.py  profile.py  session.py  user.py
app/services/: api_key_service.py  chat_service.py  instance_service.py  llm_service.py  profile_service.py  session_service.py  user_service.py
docs/: instance_settings_api.md
scripts/: add_user_id_to_instances.py  create_test_data.py  init-dev.ps1  init-dev.sh  migrate_instance_settings.py
tests/: conftest.py  test_instance_service.py  test_instance_settings.py  test_websocket.py
